# mkdocs-bibtex

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  requirements-testing.txt  requirements.txt  setup.cfg  setup.py
.dependabot/: config.yml
.github/workflows/: post-process.yml  release.yml  testing.yml
example/: mkdocs.yml
example/docs/: full_bib.md  index.md
mkdocs_bibtex/: __init__.py  plugin.py  test_plugin.py  utils.py
src/mkdocs_bibtex/: __init__.py  citation.py  config.py  plugin.py  registry.py  type.py  utils.py
test_files/: long_cite.bib  parenthesis.bib  single.bib  springer-basic-author-date.csl  test.bib  test_citation.py  test_features.py  test_inline.bib  test_integration.py  test_pandoc_registry.py  test_plugin.py  test_simple_registry.py  test_utils.py
test_files/multi_bib/: bib1.bib  bib2.bib
