[tool.poetry]
name = "mkdocs-bibtex"
version = "0.1.0"
description = ""
authors = ["Jin SAKUMA <jyori112@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.1.2"
markdown = "^3.3.3"
pybtex = "^0.23.0"
pypandoc = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
